test/domains/compilerErrors/notsupportedParsafe-block.chpl
use notsupportedCommon;

writeln(DistributedBase.parSafe);
